Add more fixes for JDK 9